--- a/html5-boilerplate.style.css
+++ b/html5-boilerplate.style.css
@@ -110,7 +110,7 @@ html { overflow-y: scroll; }
 /* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
 a:hover, a:active { outline: none; }
 
-a, a:active, a:visited { color: #607890; }
+a, a:active, a:visited { color: #70202B; }
 a:hover { color: #036; }
 
 
